# reference-code

system-controller/: CMakeLists.txt  main.cpp
system-controller/include/: buffer.h  canCalibrate.h  commandLineParser.h  commandsManager.h  configBuilder.h  log.h  masterMotorizedWindow.h  mosquittoToMqttData.h  motorData.h  motorMotionManager.h  motorizedWindow.h  motorsHandler.h  movingWindow.h  mqttData.h  mqttManager.h  mqttMotor.h  passiveWindow.h  pch.h  positionTrack.h  systemSettings.h  systemSettingsParser.h  topicHandler.h  windowPushZone.h  wing.h  wingCalibrationHandler.h  wingData.h  wingInputTranslator.h  wingRelationManager.h  wingSiblingType.h  wingStatus.h  wingStatusPublisher.h  wingsHandler.h
system-controller/src/: commandLineParser.cpp  commandsManager.cpp  configBuilder.cpp  log.cpp  masterMotorizedWindow.cpp  motorData.cpp  motorMotionManager.cpp  motorizedWindow.cpp  motorsHandler.cpp  movingWindow.cpp  mqttData.cpp  mqttManager.cpp  mqttMotor.cpp  passiveWindow.cpp  topicHandler.cpp  wing.cpp  wingCalibrationHandler.cpp  wingData.cpp  wingInputTranslator.cpp  wingRelationManager.cpp  wingStatusPublisher.cpp  wingsHandler.cpp
system-controller/tests/: CMakeLists.txt
system-controller/tests/include/: motorParser.h  mqttMotorSim.h  testMotorMotionManager.h  testMqttMotor.h  testWing.h  testWingStatusPublisher.h  utils.h  verifier.h
system-controller/tests/src/: SystemSettingsTests.cpp  commandsManagerTests.cpp  configBuilderTests.cpp  cornerScenarioTests.cpp  masterMotorizedWindowTests.cpp  motorDataTests.cpp  motorMotionManagerTests.cpp  motorizedWindowTests.cpp  motorsHandlerTests.cpp  movingWindowTests.cpp  mqttMotorSim.cpp  mqttMotorTests.cpp  passiveWindowTests.cpp  systemSettingsParserTests.cpp  testMotorMotionManager.cpp  testWing.cpp  topicHandlerTests.cpp  verifier.cpp  windowPushZoneTests.cpp  wingCalibrationHandlerTests.cpp  wingDataTests.cpp  wingInputTranslatorTests.cpp  wingRelationManagerTests.cpp  wingTests.cpp  wingsHandlerTests.cpp
system-controller/tests/testData/: QOX-XXQ_test.json  QXvXQ_withStrokes.json  X_XX_test.json  XvX_test.json  settings_test.json
